--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "node server.js",
-    "lint": "ESLINT_USE_FLAT_CONFIG=true next lint",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
