--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,7 +109,7 @@ jobs:
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
 
       - name: Prune dev dependencies
-        run: npm prune --production --legacy-peer-deps
+        run: npm prune --omit=dev --legacy-peer-deps
 
       - name: Prepare release package
         run: |
