fix: pipeline concurrency control, remove legacy-peer-deps, fix health check
- Add concurrency group to prevent parallel pipeline runs (queue instead of cancel)
- Remove --legacy-peer-deps from npm ci and npm prune (not needed)
- Add next.config.mjs to release package
- Fix health check curl to follow redirects (-L) and set timeout
- Mark /api/health as force-dynamic to prevent static prerendering

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
       - main
   workflow_dispatch:
 
+concurrency:
+  group: deploy-${{ github.ref }}
+  cancel-in-progress: false
+
 env:
   AZURE_WEBAPP_NAME: bnoon
   SITE_URL: https://bnoon.sa
@@ -44,7 +48,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci --legacy-peer-deps
+        run: npm ci
 
   # ──────────────────────────────────────────────
   # Job 2: Quality Gates (parallel with build)
@@ -119,7 +123,7 @@ jobs:
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
 
       - name: Prune dev dependencies
-        run: npm prune --omit=dev --legacy-peer-deps
+        run: npm prune --omit=dev
 
       - name: Prepare release package
         run: |
@@ -131,6 +135,7 @@ jobs:
           cp server.js release/
           cp next.config.js release/ 2>/dev/null || true
           cp next.config.ts release/ 2>/dev/null || true
+          cp next.config.mjs release/ 2>/dev/null || true
 
       - name: Create deployment ZIP
         run: cd release && zip -r -q ../release.zip .
@@ -277,7 +282,7 @@ jobs:
           echo "Polling $HEALTH_URL (max ${MAX_ATTEMPTS} attempts, ${WAIT_SECONDS}s interval)"
 
           for i in $(seq 1 $MAX_ATTEMPTS); do
-            HTTP_CODE=$(curl -s -o /tmp/health_response.json -w "%{http_code}" "$HEALTH_URL" 2>/dev/null || echo "000")
+            HTTP_CODE=$(curl -sL -o /tmp/health_response.json -w "%{http_code}" --max-time 15 "$HEALTH_URL" 2>/dev/null || echo "000")
 
             if [ "$HTTP_CODE" = "200" ]; then
               STATUS=$(cat /tmp/health_response.json | python3 -c "import sys,json; print(json.load(sys.stdin).get('status',''))" 2>/dev/null || echo "")
