ci: add unit tests to quality gates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,9 @@ jobs:
         continue-on-error: true
         run: npm run typecheck
 
+      - name: Unit tests
+        run: npm test
+
       - name: Security audit
         continue-on-error: true
         run: npm audit --audit-level=critical
