--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -45,20 +45,18 @@ jobs:
         run: npm ci
 
   # ──────────────────────────────────────────────
-  # Job 2: Quality Gates
+  # Job 2a: Lint (parallel)
   # ──────────────────────────────────────────────
-  quality-gates:
+  lint:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: '.node-version'
-
       - name: Restore node_modules cache
         uses: actions/cache@v4
         with:
@@ -66,16 +64,75 @@ jobs:
           key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             node-modules-${{ runner.os }}-
-
       - name: Lint
         run: npm run lint
 
+  # ──────────────────────────────────────────────
+  # Job 2b: Typecheck (parallel)
+  # ──────────────────────────────────────────────
+  typecheck:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.node-version'
+      - name: Restore node_modules cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-modules-${{ runner.os }}-
       - name: Typecheck
         run: npm run typecheck
 
+  # ──────────────────────────────────────────────
+  # Job 2c: Unit Tests (parallel)
+  # ──────────────────────────────────────────────
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.node-version'
+      - name: Restore node_modules cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-modules-${{ runner.os }}-
       - name: Unit tests
         run: npm test
 
+  # ──────────────────────────────────────────────
+  # Job 2d: Security Audit (parallel)
+  # ──────────────────────────────────────────────
+  security-audit:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.node-version'
+      - name: Restore node_modules cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-modules-${{ runner.os }}-
       - name: Security audit
         continue-on-error: true
         run: npm audit --audit-level=critical
