--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -174,19 +174,12 @@ jobs:
         env:
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: nextjs-build
-          path: .next
-          retention-days: 1
-
   # ──────────────────────────────────────────────
-  # Job 4: E2E Tests (against local build)
+  # Job 4: E2E Tests (builds and runs locally)
   # ──────────────────────────────────────────────
   e2e-tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, lint, typecheck, unit-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -204,11 +197,10 @@ jobs:
           restore-keys: |
             node-modules-${{ runner.os }}-
 
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: nextjs-build
-          path: .next
+      - name: Build Next.js app
+        run: npm run build
+        env:
+          NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
 
       - name: Get Playwright version
         id: pw-version
