--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -189,7 +189,7 @@ jobs:
   # ──────────────────────────────────────────────
   e2e-tests:
     runs-on: ubuntu-latest
-    needs: [build, lint, typecheck, unit-tests]
+    needs: [build, lint, typecheck, unit-tests, security-audit]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
