--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -178,6 +178,7 @@ jobs:
         run: tar -czf nextjs-build.tar.gz .next
 
       - name: Upload build artifact
+        if: false
         uses: actions/upload-artifact@v4
         with:
           name: nextjs-build
