--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,53 @@ permissions:
   contents: write
   issues: write
   pull-requests: write
+  actions: write
 
 jobs:
+  # ──────────────────────────────────────────────
+  # Job 0: Cleanup old artifacts (keeps last 2 per name)
+  # ──────────────────────────────────────────────
+  cleanup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Delete old artifacts
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const KEEP = 2;
+            const { data } = await github.rest.actions.listArtifactsForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              per_page: 100,
+            });
+
+            // Group artifacts by name
+            const grouped = {};
+            for (const artifact of data.artifacts) {
+              if (!grouped[artifact.name]) grouped[artifact.name] = [];
+              grouped[artifact.name].push(artifact);
+            }
+
+            // For each group, keep the newest KEEP and delete the rest
+            for (const [name, artifacts] of Object.entries(grouped)) {
+              const sorted = artifacts.sort((a, b) =>
+                new Date(b.created_at) - new Date(a.created_at)
+              );
+              const toDelete = sorted.slice(KEEP);
+              for (const artifact of toDelete) {
+                console.log(`Deleting ${name} #${artifact.id} (${artifact.created_at})`);
+                await github.rest.actions.deleteArtifact({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  artifact_id: artifact.id,
+                });
+              }
+              if (toDelete.length > 0) {
+                console.log(`${name}: deleted ${toDelete.length}, kept ${KEEP}`);
+              }
+            }
+            console.log('Cleanup complete');
+
   # ──────────────────────────────────────────────
   # Job 1: Setup — install deps and cache
   # ──────────────────────────────────────────────
@@ -148,7 +193,7 @@ jobs:
   # ──────────────────────────────────────────────
   build:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: [setup, cleanup]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
