--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,53 +19,8 @@ permissions:
   contents: write
   issues: write
   pull-requests: write
-  actions: write
 
 jobs:
-  # ──────────────────────────────────────────────
-  # Job 0: Cleanup old artifacts (keeps last 2 per name)
-  # ──────────────────────────────────────────────
-  cleanup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Delete old artifacts
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const KEEP = 2;
-            const { data } = await github.rest.actions.listArtifactsForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              per_page: 100,
-            });
-
-            // Group artifacts by name
-            const grouped = {};
-            for (const artifact of data.artifacts) {
-              if (!grouped[artifact.name]) grouped[artifact.name] = [];
-              grouped[artifact.name].push(artifact);
-            }
-
-            // For each group, keep the newest KEEP and delete the rest
-            for (const [name, artifacts] of Object.entries(grouped)) {
-              const sorted = artifacts.sort((a, b) =>
-                new Date(b.created_at) - new Date(a.created_at)
-              );
-              const toDelete = sorted.slice(KEEP);
-              for (const artifact of toDelete) {
-                console.log(`Deleting ${name} #${artifact.id} (${artifact.created_at})`);
-                await github.rest.actions.deleteArtifact({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  artifact_id: artifact.id,
-                });
-              }
-              if (toDelete.length > 0) {
-                console.log(`${name}: deleted ${toDelete.length}, kept ${KEEP}`);
-              }
-            }
-            console.log('Cleanup complete');
-
   # ──────────────────────────────────────────────
   # Job 1: Setup — install deps and cache
   # ──────────────────────────────────────────────
@@ -193,7 +148,7 @@ jobs:
   # ──────────────────────────────────────────────
   build:
     runs-on: ubuntu-latest
-    needs: [setup, cleanup]
+    needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -243,12 +198,11 @@ jobs:
       - name: Create deployment ZIP
         run: cd release && zip -r -q ../release.zip .
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Cache release package
+        uses: actions/cache/save@v4
         with:
-          name: release
           path: release.zip
-          retention-days: 3
+          key: release-${{ github.sha }}
 
   # ──────────────────────────────────────────────
   # Job 4: Semantic Release
@@ -345,10 +299,12 @@ jobs:
     needs: [build, semantic-release]
     environment: production
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
+      - name: Restore release package
+        uses: actions/cache/restore@v4
         with:
-          name: release
+          path: release.zip
+          key: release-${{ github.sha }}
+          fail-on-cache-miss: true
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
@@ -469,13 +425,12 @@ jobs:
           CI: true
           E2E_BASE_URL: ${{ env.SITE_URL }}
 
-      - name: Upload test results
+      - name: Cache test results
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/cache/save@v4
         with:
-          name: playwright-report
           path: playwright-report/
-          retention-days: 7
+          key: playwright-report-${{ github.sha }}-${{ github.run_attempt }}
 
       - name: Regression summary
         if: always()
