--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -174,19 +174,14 @@ jobs:
         env:
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
 
-      - name: Package build output
-        run: tar -czf nextjs-build.tar.gz .next
-
-      - name: Upload build artifact
-        if: false
-        uses: actions/upload-artifact@v4
+      - name: Cache build output
+        uses: actions/cache/save@v4
         with:
-          name: nextjs-build
-          path: nextjs-build.tar.gz
-          retention-days: 1
+          path: .next
+          key: nextjs-build-${{ github.event.pull_request.head.sha }}
 
   # ──────────────────────────────────────────────
-  # Job 4: E2E Tests (uses build artifact)
+  # Job 4: E2E Tests (uses cached build)
   # ──────────────────────────────────────────────
   e2e-tests:
     runs-on: ubuntu-latest
@@ -208,13 +203,12 @@ jobs:
           restore-keys: |
             node-modules-${{ runner.os }}-
 
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
+      - name: Restore build cache
+        uses: actions/cache/restore@v4
         with:
-          name: nextjs-build
-
-      - name: Extract build output
-        run: tar -xzf nextjs-build.tar.gz
+          path: .next
+          key: nextjs-build-${{ github.event.pull_request.head.sha }}
+          fail-on-cache-miss: true
 
       - name: Get Playwright version
         id: pw-version
@@ -240,10 +234,9 @@ jobs:
         env:
           CI: true
 
-      - name: Upload test report
+      - name: Cache test report
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/cache/save@v4
         with:
-          name: playwright-report
           path: playwright-report/
-          retention-days: 7
+          key: playwright-report-${{ github.event.pull_request.head.sha }}-${{ github.run_attempt }}
