ci: update deploy target to UAE North (bnoon-sa)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  AZURE_WEBAPP_NAME: bnoon
+  AZURE_WEBAPP_NAME: bnoon-sa
   SITE_URL: https://bnoon.sa
   NEXT_TELEMETRY_DISABLED: 1
 
