--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -277,9 +277,24 @@ jobs:
           EOF
           fi
 
+      - name: Record latest tag before release
+        id: before
+        run: echo "tag=$(git describe --tags --abbrev=0 2>/dev/null || echo 'none')" >> $GITHUB_OUTPUT
+
       - name: Run semantic-release
         id: release
-        run: npx semantic-release
+        run: |
+          npx semantic-release
+
+          # npx semantic-release does NOT write to $GITHUB_OUTPUT,
+          # so we detect a new release by comparing git tags.
+          NEW_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo 'none')
+          if [ "$NEW_TAG" != "${{ steps.before.outputs.tag }}" ]; then
+            echo "new_release_published=true" >> $GITHUB_OUTPUT
+            echo "new_release_version=${NEW_TAG#v}" >> $GITHUB_OUTPUT
+          else
+            echo "new_release_published=false" >> $GITHUB_OUTPUT
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
