perf: add gzip compression, fix carousel video re-fetching, add CDN cache headers
- Add compression middleware to server.js (gzip, threshold 1024 bytes)
- Fix carousel DOM destruction pattern in both EN and AR HeroBanner:
  keep all video elements in DOM, control playback via refs, use
  CSS opacity/visibility instead of unmounting
- Add smart video preload strategy: active=auto, adjacent=metadata,
  distant=none with progressive upgrade on slide change
- Throttle scroll listeners with requestAnimationFrame
- Add Cache-Control header for /_next/image endpoint in next.config.js
- Add Playwright tests for image optimization and compression
- Set Cache-Control: public, max-age=2592000 on all Azure Blob Storage
  assets (videos + images)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "compression": "^1.8.1",
     "framer-motion": "^12.23.24",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
