feat: add image optimization pipeline with LQIP blur placeholders
- Add Sharp build script that generates responsive WebP variants at
  Bootstrap-aligned breakpoints (576/768/992/1200/1400/1920) and LQIP
  blur placeholders (20px base64 WebP) for 33 Tier 1 images
- Add OptimizedImage wrapper component with auto blur+sizes from manifest
- Add OptimizedPageBanner component (created, not deployed yet)
- Migrate Benefits.tsx (3 images) and OurBlog.tsx (4 images) as demo
- Align next.config.js deviceSizes to Bootstrap breakpoints
- Add prebuild hook so manifest regenerates on every `npm run build`
- Add IMAGE-OPTIMIZATION-ROLLOUT.md with phased plan for remaining images
- 7 unit tests covering blur, sizes, overrides, and fallback behavior

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "optimize-images": "tsx scripts/optimize-images.ts",
+    "optimize-images:force": "tsx scripts/optimize-images.ts --force",
+    "prebuild": "tsx scripts/optimize-images.ts"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -46,6 +49,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
     "jsdom": "^28.0.0",
+    "tsx": "^4.21.0",
     "typescript": "5.9.2",
     "vitest": "^4.0.18"
   },
