--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ SMTP_USER=
 SMTP_PASS=
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
+
+# CDN — set to serve pre-optimized images via Azure Front Door instead of /_next/image.
+# Leave empty to fall back to Next.js image optimization.
+NEXT_PUBLIC_CDN_URL=https://bnoonsa-bjftd5h4a7bae0ce.z02.azurefd.net/website
