--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "optimize-images": "tsx scripts/optimize-images.ts",
-    "optimize-images:force": "tsx scripts/optimize-images.ts --force",
-    "prebuild": "tsx scripts/optimize-images.ts"
+    "optimize-images:force": "tsx scripts/optimize-images.ts --force"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
