--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test",
-    "optimize-images": "tsx scripts/optimize-images.ts",
-    "optimize-images:force": "tsx scripts/optimize-images.ts --force"
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -48,7 +46,6 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
     "jsdom": "^28.0.0",
-    "tsx": "^4.21.0",
     "typescript": "5.9.2",
     "vitest": "^4.0.18"
   },
