chore: update configs, tests, and remove stale files
Update e2e tests, next.config, package.json, and docs to reflect
CDN image delivery. Remove stale files (convert-to-client.js,
dummy.txt, accidental git/main/npm files). Add prettier config.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -46,6 +47,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
     "jsdom": "^28.0.0",
+    "prettier": "^3.8.1",
     "typescript": "5.9.2",
     "vitest": "^4.0.18"
   },
